Set height to avoid elements overlapping when resized

--- a/aboveFold.css
+++ b/aboveFold.css
@@ -729,10 +729,6 @@
         height: 328px;
     }
 
-    .mainFunctionBox{
-        max-height:386px;
-    }
-
     #fullS{
         min-height: none !important;
     }
